Адаптивные декоративные элементы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,31 +8,24 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
-  <body>
+  <body class="page-catalog">
     <header class="page-header">
       <div class="page-header__top">
-        <div class="container page-header__logo">
+        <div class="container page-header__container">
           <img
-            src="http://placehold.it/33x38"
+            src="img/logo-mobile.svg"
             alt="Лого Кэт энерджи"
-            class="page-header__logo-image"
-            width="33"
+            class="page-header__logo"
+            width="191"
             height="38"
-          />
-          <img
-            src="http://placehold.it/101x18"
-            alt="Логотип Кэт энерджи"
-            class="page-header__logo-type"
-            width="101"
-            height="18"
           />
           <button class="page-header__menu-toggle">
             <span class="visually-hidden">Открыть меню</span>
           </button>
         </div>
       </div>
-      <nav class="main-nav">
-        <ul class="main-nav__list site-list">
+      <nav class="page-header__nav">
+        <ul class="page-header__nav-list site-list site-list--on-background">
           <li class="site-list__item">
             <a href="index.html" class="site-list__link">
               Главная
@@ -51,7 +44,7 @@
         </ul>
       </nav>
     </header>
-    <main class="page-main">
+    <main class="page-main page-main--catalog">
       <section class="page-main__section catalog">
         <div class="container">
           <h2 class="catalog__title">
@@ -63,7 +56,7 @@
             <article class="product">
               <img
                 class="product__image"
-                src="http://placehold.it/140x144"
+                src="img/chicken-small-mobile@1x.jpg"
                 alt="Фото продукта"
                 width="140"
                 height="144"
@@ -96,7 +89,7 @@
             <article class="product">
               <img
                 class="product__image"
-                src="http://placehold.it/140x144"
+                src="img/chicken-big-mobile@1x.jpg"
                 alt="Фото продукта"
                 width="140"
                 height="144"
@@ -129,7 +122,7 @@
             <article class="product">
               <img
                 class="product__image"
-                src="http://placehold.it/140x144"
+                src="img/fish-small-mobile@1x.jpg"
                 alt="Фото продукта"
                 width="140"
                 height="144"
@@ -162,7 +155,7 @@
             <article class="product">
               <img
                 class="product__image"
-                src="http://placehold.it/140x144"
+                src="img/fish-big-mobile@1x.jpg"
                 alt="Фото продукта"
                 width="140"
                 height="144"
@@ -195,7 +188,7 @@
             <article class="product">
               <img
                 class="product__image"
-                src="http://placehold.it/140x144"
+                src="img/buckwheat-small-mobile@1x.jpg"
                 alt="Фото продукта"
                 width="140"
                 height="144"
@@ -228,7 +221,7 @@
             <article class="product">
               <img
                 class="product__image"
-                src="http://placehold.it/140x144"
+                src="img/buckwheat-big-mobile@1x.jpg"
                 alt="Фото продукта"
                 width="140"
                 height="144"
@@ -261,7 +254,7 @@
             <article class="product">
               <img
                 class="product__image"
-                src="http://placehold.it/140x144"
+                src="img/rice-small-mobile@1x.jpg"
                 alt="Фото продукта"
                 width="140"
                 height="144"
@@ -308,7 +301,11 @@
 
       <section class="page-main__section additions">
         <h2 class="additions__title">
-          Дополнительные товары
+          <div class="container additions__title-container">
+            <p class="additions__title-text">
+              Дополнительные товары
+            </p>
+          </div>
         </h2>
         <div class="container additions__container">
           <ul class="additions__list">
@@ -391,7 +388,7 @@
           </ul>
           <div class="additions__present">
             <p class="additions__present-text">
-              Закажите все и&nbsp;получите чехол для кота в подарок!
+              Закажите все и&nbsp;получите&nbsp;чехол&nbsp;для кота в подарок!
             </p>
           </div>
         </div>
@@ -399,7 +396,7 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__address address">
-        <div class="container">
+        <div class="container address__container">
           <p class="address__invitation">
             Приглашаем к&nbsp;сотрудничеству дилеров!
           </p>
@@ -410,19 +407,21 @@
         </div>
       </div>
       <div class="page-footer__map">
-        <img
-          class="page-footer__map-image"
-          src="http://placehold.it/320x362"
-          alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург"
-          width="320"
-          height="362"
-        />
+        <div class="container page-footer__container">
+          <img
+            class="page-footer__map-pin"
+            src="img/map-pin.png"
+            alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург"
+            width="62"
+            height="53"
+          />
+        </div>
       </div>
       <div class="container">
         <a href="#" class="page-footer__logo">
           <img
             class="page-footer__logo-image"
-            src="http://placehold.it/128x24"
+            src="img/logo-footer.svg"
             alt="Лого Cat Energy"
             width="128"
             height="24"
@@ -430,17 +429,17 @@
         </a>
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a href="#" class="social__link">
+            <a href="#" class="social__link social__link--vk">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link">
+            <a href="#" class="social__link social__link--instagram">
               <span class="visually-hidden">Instagram</span>
             </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link">
+            <a href="#" class="social__link social__link--facebook">
               <span class="visually-hidden">Facebook</span>
             </a>
           </li>
@@ -451,7 +450,7 @@
           </a>
           <a href="https://htmlacademy.ru" class="page-footer__developers-logo">
             <img
-              src="http://placehold.it/27x34"
+              src="img/htmlacademy.svg"
               alt="HTML Academy"
               class="page-footer__developers-logo-image"
               width="27"
