--- a/source/index.html
+++ b/source/index.html
@@ -11,28 +11,21 @@
   <body>
     <header class="page-header">
       <div class="page-header__top">
-        <div class="page-header__logo">
+        <div class="container page-header__container">
           <img
-            src="http://placehold.it/33x38"
+            src="img/logo-mobile.svg"
             alt="Лого Кэт энерджи"
-            class="page-header__logo-image"
-            width="33"
+            class="page-header__logo"
+            width="191"
             height="38"
-          />
-          <img
-            src="http://placehold.it/101x18"
-            alt="Логотип Кэт энерджи"
-            class="page-header__logo-type"
-            width="101"
-            height="18"
           />
           <button class="page-header__menu-toggle">
             <span class="visually-hidden">Открыть меню</span>
           </button>
         </div>
       </div>
-      <nav class="main-nav">
-        <ul class="main-nav__list site-list site-list--on-background">
+      <nav class="page-header__nav">
+        <ul class="page-header__nav-list site-list site-list--on-background">
           <li class="site-list__item">
             <a class="site-list__link">
               Главная
@@ -63,12 +56,12 @@
           </p>
           <img
             class="promo__img"
-            src="http://placehold.it/280x271"
+            src="img/index-can-mobile@1x.png"
             alt="Cat Energy Pro Курица"
             width="280"
             height="271"
           />
-          <button class="button button--big promo__button">
+          <button class="button promo__button">
             Подобрать программу
           </button>
         </div>
@@ -133,64 +126,68 @@
         </div>
       </section>
 
-      <section class="page-main__section page-main__section--gray example">
-        <div class="container example__container">
-          <div class="example__info">
-            <h2 class="example__title">
-              Живой пример
-            </h2>
-            <p class="example__text">
-              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм
-              на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
-              При этом он не менял своих привычек и по-прежнему спит по 16 часов
-              в день.
-            </p>
-            <table class="example__tabel table">
-              <tbody>
-                <tr class="table__row">
-                  <td class="table__key">
-                    Снижение веса
-                  </td>
-                  <td class="table__value">
-                    5 кг
-                  </td>
-                </tr>
-                <tr class="table__row">
-                  <td class="table__key">
-                    Затрачено времени
-                  </td>
-                  <td class="table__value">
-                    60 дней
-                  </td>
-                </tr>
-              </tbody>
-              <tfoot class="table__footer">
-                <tr>
-                  <td>
-                    Затраты на питание:
-                  </td>
-                  <td>
-                    15 000 руб.
-                  </td>
-                </tr>
-              </tfoot>
-            </table>
+      <section class="page-main__section example">
+        <div class="example__wrapper">
+          <div class="container example__container">
+            <div class="example__info">
+              <h2 class="example__title">
+                Живой пример
+              </h2>
+              <p class="example__text">
+                Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм
+                на Cat Energy Slim. Отличный результат без изнуряющих
+                тренировок! При этом он не менял своих привычек и по-прежнему
+                спит по 16 часов в день.
+              </p>
+              <table class="example__tabel table">
+                <tbody>
+                  <tr class="table__row">
+                    <td class="table__key">
+                      Снижение веса
+                    </td>
+                    <td class="table__value">
+                      5 кг
+                    </td>
+                  </tr>
+                  <tr class="table__row">
+                    <td class="table__key">
+                      Затрачено времени
+                    </td>
+                    <td class="table__value">
+                      60 дней
+                    </td>
+                  </tr>
+                </tbody>
+                <tfoot class="table__footer">
+                  <tr>
+                    <td>
+                      Затраты на питание:
+                    </td>
+                    <td>
+                      15 000 руб.
+                    </td>
+                  </tr>
+                </tfoot>
+              </table>
+            </div>
           </div>
           <div class="example__slider before-after">
             <ul class="before-after__list">
               <li class="before-after__item">
                 <img
-                  src="http://placehold.it/280x240"
+                  class="before-after__img before-after__img--before"
+                  src="img/before-mobile@1x.png"
                   alt="slider1"
-                  width="280"
+                  width="320"
                   height="240"
                 />
               </li>
               <li class="before-after__item">
                 <img
-                  src="http://placehold.it/280x240"
+                  class="before-after__img before-after__img--after"
+                  src="img/after-mobile@1x.png"
                   alt="slider2"
-                  width="280"
+                  width="320"
                   height="240"
                 />
               </li>
@@ -212,7 +209,7 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__address address">
-        <div class="container">
+        <div class="container address__container">
           <p class="address__invitation">
             Приглашаем к&nbsp;сотрудничеству дилеров!
           </p>
@@ -223,19 +220,21 @@
         </div>
       </div>
       <div class="page-footer__map">
-        <img
-          class="page-footer__map-image"
-          src="http://placehold.it/320x362"
-          alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург"
-          width="320"
-          height="362"
-        />
+        <div class="container page-footer__container">
+          <img
+            class="page-footer__map-pin"
+            src="img/map-pin.png"
+            alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург"
+            width="62"
+            height="53"
+          />
+        </div>
       </div>
       <div class="container">
         <a href="#" class="page-footer__logo">
           <img
             class="page-footer__logo-image"
-            src="http://placehold.it/128x24"
+            src="img/logo-footer.svg"
             alt="Лого Cat Energy"
             width="128"
             height="24"
@@ -243,17 +242,17 @@
         </a>
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a href="#" class="social__link">
+            <a href="#" class="social__link social__link--vk">
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link">
+            <a href="#" class="social__link social__link--instagram">
               <span class="visually-hidden">Instagram</span>
             </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link">
+            <a href="#" class="social__link social__link--facebook">
               <span class="visually-hidden">Facebook</span>
             </a>
           </li>
@@ -264,7 +263,7 @@
           </a>
           <a href="https://htmlacademy.ru" class="page-footer__developers-logo">
             <img
-              src="http://placehold.it/27x34"
+              src="img/htmlacademy.svg"
               alt="HTML Academy"
               class="page-footer__developers-logo-image"
               width="27"
