--- a/source/catalog.html
+++ b/source/catalog.html
@@ -54,13 +54,28 @@
         <ul class="container catalog__list">
           <li class="catalog__item">
             <article class="product">
-              <img
-                class="product__image"
-                src="img/chicken-small-mobile@1x.jpg"
-                alt="Фото продукта"
-                width="140"
-                height="144"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1300px)"
+                  srcset="
+                    img/chicken-small-desktop@1x.png 1x,
+                    img/chicken-small-desktop@2x.png 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    img/chicken-small-tablet@1x.png 1x,
+                    img/chicken-small-tablet@2x.png 2x
+                  "
+                />
+                <img
+                  class="product__image"
+                  src="img/chicken-small-mobile@1x.jpg"
+                  srcset="img/chicken-small-mobile@2x.jpg 2x"
+                  alt="Фото продукта"
+                />
+              </picture>
               <div class="product__info">
                 <h3 class="product__title">
                   Cat Energy PRO 500&nbsp;г
@@ -87,13 +102,28 @@
           </li>
           <li class="catalog__item">
             <article class="product">
-              <img
-                class="product__image"
-                src="img/chicken-big-mobile@1x.jpg"
-                alt="Фото продукта"
-                width="140"
-                height="144"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1300px)"
+                  srcset="
+                    img/chicken-big-desktop@1x.png 1x,
+                    img/chicken-big-desktop@2x.png 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    img/chicken-big-tablet@1x.png 1x,
+                    img/chicken-big-tablet@2x.png 2x
+                  "
+                />
+                <img
+                  class="product__image"
+                  src="img/chicken-big-mobile@1x.jpg"
+                  srcset="img/chicken-big-mobile@2x.jpg 2x"
+                  alt="Фото продукта"
+                />
+              </picture>
               <div class="product__info">
                 <h3 class="product__title">
                   Cat Energy PRO 1000 г
@@ -120,13 +150,28 @@
           </li>
           <li class="catalog__item">
             <article class="product">
-              <img
-                class="product__image"
-                src="img/fish-small-mobile@1x.jpg"
-                alt="Фото продукта"
-                width="140"
-                height="144"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1300px)"
+                  srcset="
+                    img/fish-small-desktop@1x.png 1x,
+                    img/fish-small-desktop@2x.png 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    img/fish-small-tablet@1x.png 1x,
+                    img/fish-small-tablet@2x.png 2x
+                  "
+                />
+                <img
+                  class="product__image"
+                  src="img/fish-small-mobile@1x.jpg"
+                  srcset="img/fish-small-mobile@2x.jpg 2x"
+                  alt="Фото продукта"
+                />
+              </picture>
               <div class="product__info">
                 <h3 class="product__title">
                   Cat Energy PRO 500 г
@@ -153,13 +198,28 @@
           </li>
           <li class="catalog__item">
             <article class="product">
-              <img
-                class="product__image"
-                src="img/fish-big-mobile@1x.jpg"
-                alt="Фото продукта"
-                width="140"
-                height="144"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1300px)"
+                  srcset="
+                    img/fish-big-desktop@1x.png 1x,
+                    img/fish-big-desktop@2x.png 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    img/fish-big-tablet@1x.png 1x,
+                    img/fish-big-tablet@2x.png 2x
+                  "
+                />
+                <img
+                  class="product__image"
+                  src="img/fish-big-mobile@1x.jpg"
+                  srcset="img/fish-big-mobile@2x.jpg 2x"
+                  alt="Фото продукта"
+                />
+              </picture>
               <div class="product__info">
                 <h3 class="product__title">
                   Cat Energy PRO 1000 г
@@ -186,13 +246,28 @@
           </li>
           <li class="catalog__item">
             <article class="product">
-              <img
-                class="product__image"
-                src="img/buckwheat-small-mobile@1x.jpg"
-                alt="Фото продукта"
-                width="140"
-                height="144"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1300px)"
+                  srcset="
+                    img/buckwheat-small-desktop@1x.png 1x,
+                    img/buckwheat-small-desktop@2x.png 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    img/buckwheat-big-tablet@1x.png 1x,
+                    img/buckwheat-big-tablet@2x.png 2x
+                  "
+                />
+                <img
+                  class="product__image"
+                  src="img/buckwheat-small-mobile@1x.jpg"
+                  srcset="img/buckwheat-small-mobile@2x.jpg 2x"
+                  alt="Фото продукта"
+                />
+              </picture>
               <div class="product__info">
                 <h3 class="product__title">
                   Cat Energy Slim 500 г
@@ -219,13 +294,28 @@
           </li>
           <li class="catalog__item">
             <article class="product">
-              <img
-                class="product__image"
-                src="img/buckwheat-big-mobile@1x.jpg"
-                alt="Фото продукта"
-                width="140"
-                height="144"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1300px)"
+                  srcset="
+                    img/buckwheat-big-desktop@1x.png 1x,
+                    img/buckwheat-big-desktop@2x.png 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    img/buckwheat-big-tablet@1x.png 1x,
+                    img/buckwheat-big-tablet@2x.png 2x
+                  "
+                />
+                <img
+                  class="product__image"
+                  src="img/buckwheat-big-mobile@1x.jpg"
+                  srcset="img/buckwheat-big-mobile@2x.jpg 2x"
+                  alt="Фото продукта"
+                />
+              </picture>
               <div class="product__info">
                 <h3 class="product__title">
                   Cat Energy Slim 1000 г
@@ -252,13 +342,28 @@
           </li>
           <li class="catalog__item">
             <article class="product">
-              <img
-                class="product__image"
-                src="img/rice-small-mobile@1x.jpg"
-                alt="Фото продукта"
-                width="140"
-                height="144"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1300px)"
+                  srcset="
+                    img/rice-small-desktop@1x.png 1x,
+                    img/rice-small-desktop@2x.png 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    img/rice-small-tablet@1x.png 1x,
+                    img/rice-small-tablet@2x.png 2x
+                  "
+                />
+                <img
+                  class="product__image"
+                  src="img/rice-small-mobile@1x.jpg"
+                  srcset="img/rice-small-mobile@2x.jpg 2x"
+                  alt="Фото продукта"
+                />
+              </picture>
               <div class="product__info">
                 <h3 class="product__title">
                   Cat Energy Slim 500 г
