--- a/source/index.html
+++ b/source/index.html
@@ -12,13 +12,17 @@
     <header class="page-header">
       <div class="page-header__top">
         <div class="container page-header__container">
-          <img
-            src="img/logo-mobile.svg"
-            alt="Лого Кэт энерджи"
-            class="page-header__logo"
-            width="191"
-            height="38"
-          />
+          <picture>
+            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg" />
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" />
+            <img
+              src="img/logo-mobile.svg"
+              alt="Лого Кэт энерджи"
+              class="page-header__logo"
+              width="191"
+              height="38"
+            />
+          </picture>
           <button class="page-header__menu-toggle">
             <span class="visually-hidden">Открыть меню</span>
           </button>
@@ -54,13 +58,29 @@
           <p class="promo__slogan">
             Занялся собой? Займись котом!
           </p>
-          <img
-            class="promo__img"
-            src="img/index-can-mobile@1x.png"
-            alt="Cat Energy Pro Курица"
-            width="280"
-            height="271"
-          />
+          <picture>
+            <source
+              media="(min-width: 1200px)"
+              srcset="
+                img/index-can-desktop@1x.png 1x,
+                img/index-can-desktop@2x.png 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              srcset="
+                img/index-can-tablet@1x.jpg 1x,
+                img/index-can-tablet@2x.jpg 2x
+              "
+            />
+
+            <img
+              class="promo__img"
+              src="img/index-can-mobile@1x.png"
+              srcset="img/index-can-mobile@2x.png 2x"
+              alt="Cat Energy Pro Курица"
+            />
+          </picture>
           <button class="button promo__button">
             Подобрать программу
           </button>
@@ -174,22 +194,52 @@
           <div class="example__slider before-after">
             <ul class="before-after__list">
               <li class="before-after__item">
-                <img
-                  class="before-after__img before-after__img--before"
-                  src="img/before-mobile@1x.png"
-                  alt="slider1"
-                  width="320"
-                  height="240"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      img/before-desktop@1x.png 1x,
+                      img/before-desktop@2x.png 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/before-tablet@1x.png 1x,
+                      img/before-tablet@2x.png 2x
+                    "
+                  />
+                  <img
+                    class="before-after__img before-after__img--before"
+                    src="img/before-mobile@1x.png"
+                    srcset="img/before-mobile@2x.png 2x"
+                    alt="slider1"
+                  />
+                </picture>
               </li>
               <li class="before-after__item">
-                <img
-                  class="before-after__img before-after__img--after"
-                  src="img/after-mobile@1x.png"
-                  alt="slider2"
-                  width="320"
-                  height="240"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1200px)"
+                    srcset="
+                      img/after-desktop@1x.png 1x,
+                      img/after-desktop@2x.png 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      img/after-tablet@1x.png 1x,
+                      img/after-tablet@2x.png 2x
+                    "
+                  />
+                  <img
+                    class="before-after__img before-after__img--after"
+                    src="img/after-mobile@1x.png"
+                    srcset="img/after-mobile@2x.png 2x"
+                    alt="slider2"
+                  />
+                </picture>
               </li>
             </ul>
             <div class="before-after__controls">
