--- a/source/index.html
+++ b/source/index.html
@@ -8,28 +8,33 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
-  <body>
+  <body class="page-index">
     <header class="page-header">
       <div class="page-header__top">
         <div class="container page-header__container">
-          <picture>
-            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg" />
-            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" />
-            <img
-              src="img/logo-mobile.svg"
-              alt="Лого Кэт энерджи"
-              class="page-header__logo"
-              width="191"
-              height="38"
-            />
-          </picture>
+          <a href="" class="page-header__link">
+            <picture>
+              <source
+                media="(min-width: 1300px)"
+                srcset="img/logo-desktop.svg"
+              />
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" />
+              <img
+                src="img/logo-mobile.svg"
+                alt="Лого Кэт энерджи"
+                class="page-header__logo"
+                width="191"
+                height="38"
+              />
+            </picture>
+          </a>
           <button class="page-header__menu-toggle">
             <span class="visually-hidden">Открыть меню</span>
           </button>
         </div>
       </div>
       <nav class="page-header__nav">
-        <ul class="page-header__nav-list site-list site-list--on-background">
+        <ul class="page-header__nav-list site-list">
           <li class="site-list__item">
             <a class="site-list__link">
               Главная
@@ -60,7 +65,7 @@
           </p>
           <picture>
             <source
-              media="(min-width: 1200px)"
+              media="(min-width: 1300px)"
               srcset="
                 img/index-can-desktop@1x.png 1x,
                 img/index-can-desktop@2x.png 2x
@@ -196,7 +201,7 @@
               <li class="before-after__item">
                 <picture>
                   <source
-                    media="(min-width: 1200px)"
+                    media="(min-width: 1300px)"
                     srcset="
                       img/before-desktop@1x.png 1x,
                       img/before-desktop@2x.png 2x
@@ -220,7 +225,7 @@
               <li class="before-after__item">
                 <picture>
                   <source
-                    media="(min-width: 1200px)"
+                    media="(min-width: 1300px)"
                     srcset="
                       img/after-desktop@1x.png 1x,
                       img/after-desktop@2x.png 2x
@@ -281,46 +286,60 @@
         </div>
       </div>
       <div class="container">
-        <a href="#" class="page-footer__logo">
-          <img
-            class="page-footer__logo-image"
-            src="img/logo-footer.svg"
-            alt="Лого Cat Energy"
-            width="128"
-            height="24"
-          />
+        <a class="page-footer__logo">
+          <svg class="page-footer__logo-image" width="128" height="24">
+            <use xlink:href="img/sprite.svg#logo-footer"></use>
+          </svg>
         </a>
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a href="#" class="social__link social__link--vk">
+            <a href="#" class="social__link">
+              <svg class="social__icon social__icon--vk" width="22" height="22">
+                <use xlink:href="img/sprite.svg#icon-vk"></use>
+              </svg>
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--instagram">
+            <a href="#" class="social__link">
+              <svg
+                class="social__icon social__icon--insta"
+                width="16"
+                height="16"
+              >
+                <use xlink:href="img/sprite.svg#icon-insta"></use>
+              </svg>
               <span class="visually-hidden">Instagram</span>
             </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--facebook">
+            <a href="#" class="social__link">
+              <svg
+                class="social__icon social__icon--insta"
+                width="10"
+                height="19"
+              >
+                <use xlink:href="img/sprite.svg#icon-fb"></use>
+              </svg>
               <span class="visually-hidden">Facebook</span>
             </a>
           </li>
         </ul>
-        <div class="page-footer__developers-credits">
-          <a href="https://htmlacademy.ru" class="page-footer__developers-link">
+        <a
+          href="https://htmlacademy.ru"
+          class="page-footer__developers-credits"
+        >
+          <div class="page-footer__developers-link">
             HTML Academy
-          </a>
-          <a href="https://htmlacademy.ru" class="page-footer__developers-logo">
-            <img
-              src="img/htmlacademy.svg"
-              alt="HTML Academy"
-              class="page-footer__developers-logo-image"
-              width="27"
-              height="34"
-            />
-          </a>
-        </div>
+          </div>
+          <svg
+            class="page-footer__developers-logo-image"
+            width="27"
+            height="34"
+          >
+            <use xlink:href="img/sprite.svg#htmlacademy"></use>
+          </svg>
+        </a>
       </div>
     </footer>
   </body>
