--- a/source/order.html
+++ b/source/order.html
@@ -8,24 +8,33 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
-  <body>
+  <body page-order>
     <header class="page-header">
       <div class="page-header__top">
         <div class="container page-header__container">
-          <img
-            src="img/logo-mobile.svg"
-            alt="Лого Кэт энерджи"
-            class="page-header__logo"
-            width="191"
-            height="38"
-          />
+          <a href="index.html" class="page-header__link">
+            <picture>
+              <source
+                media="(min-width: 1300px)"
+                srcset="img/logo-desktop.svg"
+              />
+              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" />
+              <img
+                src="img/logo-mobile.svg"
+                alt="Лого Кэт энерджи"
+                class="page-header__logo"
+                width="191"
+                height="38"
+              />
+            </picture>
+          </a>
           <button class="page-header__menu-toggle">
             <span class="visually-hidden">Открыть меню</span>
           </button>
         </div>
       </div>
       <nav class="page-header__nav">
-        <ul class="page-header__nav-list site-list site-list--on-background">
+        <ul class="page-header__nav-list site-list">
           <li class="site-list__item">
             <a href="index.html" class="site-list__link">
               Главная
@@ -71,6 +80,7 @@
                     id="name"
                     name="name"
                     placeholder="Барсик"
+                    required
                   />
                 </div>
                 <div class="form__field">
@@ -79,10 +89,11 @@
                   >
                   <input
                     class="form__input"
-                    type="text"
+                    type="number"
                     id="weight"
                     name="weight"
                     placeholder="7"
+                    required
                   />
                 </div>
                 <div class="form__field">
@@ -91,7 +102,7 @@
                   >
                   <input
                     class="form__input"
-                    type="text"
+                    type="number"
                     id="age"
                     name="age"
                     placeholder="7"
@@ -160,12 +171,20 @@
                   E-mail:*
                 </label>
                 <input
-                  type="text"
-                  class="form__input form__input--email"
+                  type="email"
+                  class="form__input"
                   id="email"
                   name="email"
                   placeholder="kuklachev@gmail.com"
+                  required
                 />
+                <svg
+                  class="form__input-icon form__input-icon--email"
+                  width="20"
+                  height="13"
+                >
+                  <use xlink:href="img/sprite.svg#icon-mail"></use>
+                </svg>
               </div>
               <div class="form__field form__field--phone">
                 <label for="phone" class="form__label">Телефон:*</label>
@@ -175,7 +194,15 @@
                   id="phone"
                   name="phone"
                   placeholder="8 (960) 900-60-90"
+                  required
                 />
+                <svg
+                  class="form__input-icon form__input-icon--phone"
+                  width="20"
+                  height="20"
+                >
+                  <use xlink:href="img/sprite.svg#icon-phone"></use>
+                </svg>
               </div>
             </div>
           </fieldset>
@@ -288,46 +315,60 @@
         </div>
       </div>
       <div class="container">
-        <a href="#" class="page-footer__logo">
-          <img
-            class="page-footer__logo-image"
-            src="img/logo-footer.svg"
-            alt="Лого Cat Energy"
-            width="128"
-            height="24"
-          />
+        <a href="index.html" class="page-footer__logo">
+          <svg class="page-footer__logo-image" width="128" height="24">
+            <use xlink:href="img/sprite.svg#logo-footer"></use>
+          </svg>
         </a>
         <ul class="page-footer__social social">
           <li class="social__item">
-            <a href="#" class="social__link social__link--vk">
+            <a href="#" class="social__link">
+              <svg class="social__icon social__icon--vk" width="22" height="22">
+                <use xlink:href="img/sprite.svg#icon-vk"></use>
+              </svg>
               <span class="visually-hidden">Вконтакте</span>
             </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--instagram">
+            <a href="#" class="social__link">
+              <svg
+                class="social__icon social__icon--insta"
+                width="16"
+                height="16"
+              >
+                <use xlink:href="img/sprite.svg#icon-insta"></use>
+              </svg>
               <span class="visually-hidden">Instagram</span>
             </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--facebook">
+            <a href="#" class="social__link">
+              <svg
+                class="social__icon social__icon--insta"
+                width="10"
+                height="19"
+              >
+                <use xlink:href="img/sprite.svg#icon-fb"></use>
+              </svg>
               <span class="visually-hidden">Facebook</span>
             </a>
           </li>
         </ul>
-        <div class="page-footer__developers-credits">
-          <a href="https://htmlacademy.ru" class="page-footer__developers-link">
+        <a
+          href="https://htmlacademy.ru"
+          class="page-footer__developers-credits"
+        >
+          <div class="page-footer__developers-link">
             HTML Academy
-          </a>
-          <a href="https://htmlacademy.ru" class="page-footer__developers-logo">
-            <img
-              src="img/htmlacademy.svg"
-              alt="HTML Academy"
-              class="page-footer__developers-logo-image"
-              width="27"
-              height="34"
-            />
-          </a>
-        </div>
+          </div>
+          <svg
+            class="page-footer__developers-logo-image"
+            width="27"
+            height="34"
+          >
+            <use xlink:href="img/sprite.svg#htmlacademy"></use>
+          </svg>
+        </a>
       </div>
     </footer>
   </body>
