--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="format-detection" content="telephone=no" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/svg4everybody.js"></script>
+    <script src="js/picturefill.min.js"></script>
   </head>
 
   <body class="page-index">
@@ -343,4 +345,7 @@
       </div>
     </footer>
   </body>
+  <script>
+    svg4everybody();
+  </script>
 </html>
