--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="format-detection" content="telephone=no" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="js/svg4everybody.js"></script>
+    <script src="js/picturefill.min.js"></script>
   </head>
 
   <body class="page-catalog">
@@ -588,5 +590,8 @@
         </a>
       </div>
     </footer>
+    <script>
+      svg4everybody();
+    </script>
   </body>
 </html>
