--- a/source/order.html
+++ b/source/order.html
@@ -30,12 +30,16 @@
               />
             </picture>
           </a>
+        </div>
+      </div>
+      <nav
+        class="page-header__nav page-header__nav--closed page-header__nav--nojs"
+      >
+        <div class="container page-header__wrapper">
           <button class="page-header__menu-toggle">
             <span class="visually-hidden">Открыть меню</span>
           </button>
         </div>
-      </div>
-      <nav class="page-header__nav">
         <ul class="page-header__nav-list site-list">
           <li class="site-list__item">
             <a href="index.html" class="site-list__link">
@@ -55,7 +59,6 @@
         </ul>
       </nav>
     </header>
-
     <main class="page-main">
       <section class="page-main__section selection">
         <div class="container">
@@ -376,5 +379,6 @@
     <script>
       svg4everybody();
     </script>
+    <script src="js/script.js"></script>
   </body>
 </html>
