--- a/source/index.html
+++ b/source/index.html
@@ -30,12 +30,16 @@
               />
             </picture>
           </a>
+        </div>
+      </div>
+      <nav
+        class="page-header__nav page-header__nav--closed page-header__nav--nojs"
+      >
+        <div class="container page-header__wrapper">
           <button class="page-header__menu-toggle">
             <span class="visually-hidden">Открыть меню</span>
           </button>
         </div>
-      </div>
-      <nav class="page-header__nav">
         <ul class="page-header__nav-list site-list">
           <li class="site-list__item">
             <a class="site-list__link">
@@ -348,4 +352,5 @@
   <script>
     svg4everybody();
   </script>
+  <script src="js/script.js"></script>
 </html>
