--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,18 @@
     <title>HTML Academy: Кэт энерджи</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="format-detection" content="telephone=no" />
+    <link
+      rel="preload"
+      href="fonts/oswaldregular.woff2"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="fonts/oswaldmedium.woff2"
+      as="font"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="css/style.min.css" />
     <script src="js/svg4everybody.js"></script>
     <script src="js/picturefill.min.js"></script>
