--- a/source/index.html
+++ b/source/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/style.min.css" />
     <script src="js/svg4everybody.js"></script>
     <script src="js/picturefill.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWFNF2OjCSsMbpeRKdBXvpbz7Fn4J4UKc&callback=initMap" defer></script>
   </head>
 
   <body class="page-index">
@@ -101,8 +102,8 @@
             <source
               type="image/webp"
               srcset="
-                img/index-can-desktop@1x.webp 1x,
-                img/index-can-desktop@2x.webp 2x
+                img/index-can-mobile@1x.webp 1x,
+                img/index-can-mobile@2x.webp 2x
               "
             />
             <source
@@ -127,9 +128,9 @@
               alt="Cat Energy Pro Курица"
             />
           </picture>
-          <button class="button promo__button">
+          <a href="order.html" class="button promo__button">
             Подобрать программу
-          </button>
+          </a href>
         </div>
       </section>
 
@@ -147,7 +148,7 @@
               деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
               сбросить лишний вес.
             </p>
-            <a href="#" class="program__to-catalog">
+            <a href="catalog-slim.html" class="program__to-catalog">
               Каталог Slim
             </a>
           </article>
@@ -159,7 +160,7 @@
               Заработать авторитет среди дворовых котов и даже собак? Серия Cat
               Energy Pro поможет вашему коту нарастить необходимые мышцы!
             </p>
-            <a href="#" class="program__to-catalog">
+            <a href="catalog-pro.html" class="program__to-catalog">
               Каталог pro
             </a>
           </article>
@@ -315,15 +316,9 @@
           </p>
         </div>
       </div>
-      <div class="page-footer__map">
+      <div id="map" class= "page-footer__map">
         <div class="container page-footer__container">
-          <img
-            class="page-footer__map-pin"
-            src="img/map-pin.png"
-            alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург"
-            width="62"
-            height="53"
-          />
+
         </div>
       </div>
       <div class="container">
@@ -367,7 +362,7 @@
           </li>
         </ul>
         <a
-          href="https://htmlacademy.ru"
+          href="https://htmlacademy.ru/intensive/adaptive"
           class="page-footer__developers-credits"
         >
           <div class="page-footer__developers-link">
@@ -386,6 +381,30 @@
   </body>
   <script>
     svg4everybody();
+  </script>
+  <script>
+    var initMap = function () {
+      var map;
+
+      var mq = window.matchMedia('(min-width: 1300px)');
+
+      var myFunction = function (x) {
+        var place = {lat: 59.938668, lng: 30.323080};
+        var center = place;
+        if (x.matches) {
+          center = {lat: 59.938775, lng: 30.319395};
+        }
+        map = new google.maps.Map(
+          document.getElementById('map'), {
+            zoom: 17.2, center: center, disableDefaultUI: true
+          });
+          var image = 'img/map-pin.png'
+        var marker = new google.maps.Marker({position: place, map: map, icon: image});
+      };
+
+      myFunction(mq);
+      mq.addListener(myFunction);
+    };
   </script>
   <script src="js/script.js"></script>
 </html>
