--- a/source/catalog.html
+++ b/source/catalog.html
@@ -21,7 +21,7 @@
     <script src="js/svg4everybody.js"></script>
     <script src="js/picturefill.min.js"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWFNF2OjCSsMbpeRKdBXvpbz7Fn4J4UKc&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
       defer
     ></script>
   </head>
