--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/style.min.css" />
     <script src="js/svg4everybody.js"></script>
     <script src="js/picturefill.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWFNF2OjCSsMbpeRKdBXvpbz7Fn4J4UKc&callback=initMap" defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" defer></script>
   </head>
 
   <body class="page-index">
